# jit-jss

./: .gitignore  1.out  Analyzer.hpp  CMakeLists.txt  DataParallelTests.txt  Decoder.hpp  InitialSolution.cpp  Instance.cpp  Instance.hpp  Iterated.hpp  JumpList.cpp  Neighborhoods.cpp  Order.hpp  Parameters.hpp  Poset.cpp  README.md  RandomNumberGenerator.hpp  Schedule.hpp  Schedulers.cpp  Settings.hpp  State.cpp  State.hpp  Tabu.cpp  Tabu.hpp  TabuList.cpp  TabuTrio.cpp  Utilities.cpp  Utilities.hpp  VarKDG.hpp  VarKTabu.hpp  abz5Jsp.psi  basicDummy.psi  compileCmakeBash.sh  componentTestPlan.txt  contributors.txt  duvidas.txt  italiano.hpp  loose-equal.txt  loose-equalnames.txt  loose-tard.txt  (+16 more)
FlexibleInstances/: Dummy.ejsp  Readme.txt
GenParallelInsts/: main.cpp
GenParallelInsts/GeneratedInsts/: genParallel_J_10_M_10_maxK_6.ppsi  genParallel_J_10_M_15_maxK_2.ppsi  genParallel_J_10_M_15_maxK_4.ppsi  genParallel_J_10_M_20_maxK_4.ppsi  genParallel_J_10_M_25_maxK_6.ppsi  genParallel_J_10_M_30_maxK_3.ppsi  genParallel_J_10_M_30_maxK_6.ppsi  genParallel_J_15_M_10_maxK_2.ppsi  genParallel_J_15_M_10_maxK_4.ppsi  genParallel_J_15_M_10_maxK_5.ppsi  genParallel_J_15_M_10_maxK_6.ppsi  genParallel_J_15_M_15_maxK_3.ppsi  genParallel_J_15_M_20_maxK_6.ppsi  genParallel_J_15_M_30_maxK_4.ppsi  genParallel_J_15_M_5_maxK_2.ppsi  genParallel_J_20_M_10_maxK_2.ppsi  genParallel_J_20_M_10_maxK_4.ppsi  genParallel_J_20_M_10_maxK_6.ppsi  genParallel_J_20_M_15_maxK_3.ppsi  genParallel_J_20_M_15_maxK_4.ppsi  genParallel_J_20_M_20_maxK_3.ppsi  genParallel_J_20_M_25_maxK_5.ppsi  genParallel_J_20_M_5_maxK_3.ppsi  genParallel_J_20_M_5_maxK_4.ppsi  genParallel_J_20_M_5_maxK_6.ppsi  genParallel_J_25_M_10_maxK_2.ppsi  genParallel_J_25_M_15_maxK_6.ppsi  genParallel_J_25_M_20_maxK_4.ppsi  genParallel_J_25_M_25_maxK_6.ppsi  genParallel_J_25_M_30_maxK_2.ppsi  genParallel_J_25_M_5_maxK_5.ppsi  genParallel_J_30_M_10_maxK_5.ppsi  genParallel_J_30_M_10_maxK_6.ppsi  genParallel_J_30_M_15_maxK_3.ppsi  genParallel_J_30_M_15_maxK_5.ppsi  genParallel_J_30_M_15_maxK_6.ppsi  genParallel_J_30_M_20_maxK_2.ppsi  genParallel_J_30_M_20_maxK_4.ppsi  genParallel_J_30_M_25_maxK_5.ppsi  genParallel_J_30_M_30_maxK_4.ppsi  (+48 more)
GenParallelInsts/GholamiExtraInsts/: GhSo_10_rep_7_jm_6_maxP_9.ppsi  GhSo_10_rep_8_jm_6_maxP_9.ppsi  GhSo_10_rep_9_jm_6_maxP_9.ppsi  GhSo_11_rep_8_jm_6_maxP_99.ppsi  GhSo_12_rep_1_jm_6_maxP_999.ppsi  GhSo_12_rep_4_jm_6_maxP_999.ppsi  GhSo_12_rep_5_jm_6_maxP_999.ppsi  GhSo_12_rep_8_jm_6_maxP_999.ppsi  GhSo_13_rep_0_jm_7_maxP_9.ppsi  GhSo_13_rep_4_jm_7_maxP_9.ppsi  GhSo_13_rep_6_jm_7_maxP_9.ppsi  GhSo_14_rep_6_jm_7_maxP_99.ppsi  GhSo_14_rep_8_jm_7_maxP_99.ppsi  GhSo_14_rep_9_jm_7_maxP_99.ppsi  GhSo_15_rep_1_jm_7_maxP_999.ppsi  GhSo_15_rep_6_jm_7_maxP_999.ppsi  GhSo_15_rep_7_jm_7_maxP_999.ppsi  GhSo_15_rep_9_jm_7_maxP_999.ppsi  GhSo_16_rep_1_jm_8_maxP_9.ppsi  GhSo_16_rep_3_jm_8_maxP_9.ppsi  GhSo_17_rep_1_jm_8_maxP_99.ppsi  GhSo_17_rep_3_jm_8_maxP_99.ppsi  GhSo_17_rep_6_jm_8_maxP_99.ppsi  GhSo_17_rep_8_jm_8_maxP_99.ppsi  GhSo_17_rep_9_jm_8_maxP_99.ppsi  GhSo_18_rep_2_jm_8_maxP_999.ppsi  GhSo_18_rep_3_jm_8_maxP_999.ppsi  GhSo_18_rep_4_jm_8_maxP_999.ppsi  GhSo_19_rep_2_jm_9_maxP_9.ppsi  GhSo_19_rep_3_jm_9_maxP_9.ppsi  GhSo_19_rep_8_jm_9_maxP_9.ppsi  GhSo_1_rep_1_jm_3_maxP_9.ppsi  GhSo_1_rep_2_jm_3_maxP_9.ppsi  GhSo_1_rep_3_jm_3_maxP_9.ppsi  GhSo_20_rep_2_jm_9_maxP_99.ppsi  GhSo_20_rep_7_jm_9_maxP_99.ppsi  GhSo_21_rep_0_jm_9_maxP_999.ppsi  GhSo_21_rep_6_jm_9_maxP_999.ppsi  GhSo_22_rep_0_jm_10_maxP_9.ppsi  GhSo_22_rep_1_jm_10_maxP_9.ppsi  (+75 more)
InstChars/: eval.R  eval2.R  executeTester.sh
InstChars/Data/: all.txt
LionRunners/: VarKParallelJsp_GenInsts.sh  VarKParallelJsp_GenInstsAnalyzeTrim.sh  VarKParallelJsp_LitInsts.sh
Race/General/: hook-run  parameters.txt  tune-conf
Race/GeneralBubble/: parameters.txt
Race/Jsp/: hook-run  irace.Rdata  parameters.txt
RaceParallel/: hook-run  irace.Rdata  parameters.txt  tune-conf
RaceParallel/Instances/: la02_k3.ppsi  la07_k3.ppsi  la11_k2.ppsi
Runners/: batchFullVarParallelJsp.sh  batchFullVarParallelJspGeneratedInsts.sh  execBacthFullParallelJsp.sh  execBacthFullParallelJspAdjTime.sh  execBacthFullParallelJspAdjTimeK1_nosmuTabu.sh  execBatchFullPspBubble.sh  execBatchFullPspOnlyTabu.sh  execBatchJspActualTime.sh  execBatchLB.sh  execBatchMss.sh  execPssToMssGss.sh  getLowerBoundFromFile.sh
Runners/CompAnalysis/: execBatchBubblePert.sh  execBatchNoTrimm.sh  execBatchOnlyTabu.sh  execBatchOnlyTabu40k.sh  execBatchRandomPert.sh  execBatchYesTrimm.sh
VarKInsts/: dummyInstJobDom2nd.ppsi  dummyInstJobDom3rd.ppsi  dummyParallelGholami.ppsi
VarKInsts/GholamiInst/: la02_k2.ppsi  la03_Gh.ppsi  la03_k2.ppsi  la04_Gh.ppsi  la05_k2.ppsi  la06_Gh.ppsi  la06_k2.ppsi  la08_k3.ppsi  la10_k3.ppsi  la11_Gh.ppsi  la11_k3.ppsi  la13_k2.ppsi  la14_k2.ppsi  la14_k3.ppsi  la18_Gh.ppsi  la19_Gh.ppsi
VarKInsts/LitInsts/: la01_k2.ppsi  la02_Gh.ppsi  la04_k2.ppsi  la05_k3.ppsi  la06_k3.ppsi  la07_k2.ppsi  la08_k2.ppsi  la09_k3.ppsi  la10_Gh.ppsi  la10_k2.ppsi  la12_Gh.ppsi  la12_k2.ppsi  la12_k3.ppsi  la13_Gh.ppsi  la14_Gh.ppsi  la15_Gh.ppsi  la16_Gh.ppsi
VarkParallelInsts/Dummy/: dummyInstJobDom.ppsi  dummySimplest.ppsi
VarkParallelInsts/GenParallelInsts/: InstGen.hpp  main.cpp
VarkParallelInsts/LitInsts/: la01_Gh.ppsi  la01_k3.ppsi  la02_k3.ppsi  la03_k3.ppsi  la04_k3.ppsi  la05_Gh.ppsi  la07_Gh.ppsi  la07_k3.ppsi  la08_Gh.ppsi  la09_Gh.ppsi  la09_k2.ppsi  la11_k2.ppsi  la13_k3.ppsi  la15_k2.ppsi  la15_k3.ppsi  la17_Gh.ppsi  la20_Gh.ppsi  mt10_Gh.ppsi  mt20_Gh.ppsi
VarkParallelInsts/ReducedGenInsts/: genParallel_J_15_M_15_maxK_4.ppsi  genParallel_J_15_M_20_maxK_4.ppsi  genParallel_J_15_M_25_maxK_3.ppsi  (+14 more)
Verificador/: a.out  instance.txt  main.cpp  solution.hpp
cmake/: FindCplex.cmake  Findcplex.cmake
instgenpsp/: CMakeLists.txt  InstGen.hpp  convertGssMss.sh  execBacthJspToParallel.sh  main.cpp
insts/: AliasCreator.sh
insts/Dummy/: dummyJsp.txt  (+3 more)
parallelInst/: dummy.ppsi  la01_k1.ppsi
res/: loose-equal.txt  loose-tard.txt  results.txt  tight-equal.txt  tight-tard.txt
(+5228 files in other folders)
